# vgs-agent-toolkit

./: .gitignore  README.md  docker-compose.yaml  package-lock.json
.cursor/: mcp.json
.github/: dependabot.yml
.github/workflows/: build-agentic-commerce-tutorial.yml  build-mcp-ui-collect.yml  cmpmcp-tests.yml  mcp-vaultmcp-tests.yml  secure-data-mcp-example-backend-tests.yml  secure-data-mcp-example-frontend-tests.yml  secure-data-mcp-example-mcp-server-tests.yml  vaultmcp-tests.yml
backend/app/: __init__.py  routes.py
backend/app/templates/: payment_complete.html
backend/config/: __init__.py
backend/migrations/versions/: 356008b2a7f8_.py
examples/agentic-commerce-tutorial/: README.md
examples/agentic-commerce-tutorial/collect-card-data/: README.md  env.example  package-lock.json  package.json  server.js
examples/mcp-ui-collect/: README.md
examples/mcp-ui-collect/backend/: collect.html  main.py  pyproject.toml  script.js  test_main.py
examples/secure-data-mcp-example/: README.md  mcp.json  package-lock.json  package.json
frontend/: package.json
frontend/src/: formTester.js  proxy.js  recaptcha.js  stripeTester.js
mcp-server/: package.json  tsconfig.json
mcp-server/src/: mcpServer.ts  stripeTester.ts
mcp/cmpmcp/: README.md  SETUP.md  mcp.json  pyproject.toml
mcp/cmpmcp/cmp/: auth.py  main.py
mcp/cmpmcp/cmpmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/cmpmcp/tests/: README.md  test_main.py
mcp/cmpmcp/tests/integration/: test_account_updater.py  test_nt.py
mcp/cmpmcp/tests/unit/: test_main.py
mcp/cmpmcp/vaultmcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/vaultmcp/: README.md  ROUTES.MD  SETUP.md  main.py  mcp.json  pyproject.toml  test_main.py  vaultclient.py
vgs-proxy-routes/: outbound-to-stripe-api.yaml
(+48 files in other folders)
